Bug 308204 - ktp-debugger is ridiculously slow
Summary: ktp-debugger is ridiculously slow
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: debugger (other bugs)
Version First Reported In: 0.5.0
Platform: unspecified Linux
: NOR normal
Target Milestone: 0.6-next
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-10 23:54 UTC by David Edmundson
Modified: 2012-10-26 04:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2012-10-10 23:54:00 UTC
so slow it's unusable.
Comment 1 David Edmundson 2012-10-26 04:21:11 UTC
Git commit c62311d5aa14b40f9dfc626e074dc70ab373d72f by David Edmundson.
Committed on 11/10/2012 at 15:10.
Pushed by davidedmundson into branch 'kde-telepathy-0.5'.

Replace ListView with QTextEdit in ktp-debugger

This makes it magnitudes times faster. Also allows for selecting text and copy+paste into bug reports/attachments

REVIEW: 106809
FIXED-IN: 0.5.2

M  +1    -1    tools/debugger/CMakeLists.txt
R  +39   -98   tools/debugger/debug-message-view.cpp [from: tools/debugger/debug-messages-model.cpp - 058% similarity]
R  +11   -19   tools/debugger/debug-message-view.h [from: tools/debugger/debug-messages-model.h - 068% similarity]
M  +4    -7    tools/debugger/main-window.cpp
M  +12   -29   tools/debugger/main-window.ui

http://commits.kde.org/telepathy-common-internals/c62311d5aa14b40f9dfc626e074dc70ab373d72f
Comment 2 David Edmundson 2012-10-26 04:21:26 UTC
Git commit c62311d5aa14b40f9dfc626e074dc70ab373d72f by David Edmundson.
Committed on 11/10/2012 at 15:10.
Pushed by davidedmundson into branch 'kde-telepathy-0.5'.

Replace ListView with QTextEdit in ktp-debugger

This makes it magnitudes times faster. Also allows for selecting text and copy+paste into bug reports/attachments

REVIEW: 106809
FIXED-IN: 0.5.2

M  +1    -1    tools/debugger/CMakeLists.txt
R  +39   -98   tools/debugger/debug-message-view.cpp [from: tools/debugger/debug-messages-model.cpp - 058% similarity]
R  +11   -19   tools/debugger/debug-message-view.h [from: tools/debugger/debug-messages-model.h - 068% similarity]
M  +4    -7    tools/debugger/main-window.cpp
M  +12   -29   tools/debugger/main-window.ui

http://commits.kde.org/telepathy-common-internals/c62311d5aa14b40f9dfc626e074dc70ab373d72f