Replace ListView with QTextEdit in ktp-debugger

This makes it magnitudes times faster. Also allows for selecting text and copy+paste into bug reports/attachments

REVIEW: 106809

BUG: 308204
FIXED-IN: 0.5.2